# sprite

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
example/: index.html  script.js  style.css
sprite/: __init__.py  cli.py  server.py
