[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sprite-cli"
version = "1.0.0"
description = "A lightweight CLI tool for serving static websites locally"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Sprite CLI", email = "sprite@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = ["static", "website", "server", "cli", "local", "development"]
dependencies = [
    "click>=8.0.0",
]
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/sprite-cli/sprite"
"Bug Reports" = "https://github.com/sprite-cli/sprite/issues"
"Source" = "https://github.com/sprite-cli/sprite"

[project.scripts]
sprite = "sprite.cli:cli"